// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultiSelectOption.vue > snapshot testing > matches snapshot with active state 1`] = `
"<div data-v-d2b97c58="" class="unnnic-multi-select-option">
  <section data-v-18939422="" data-v-d2b97c58="" class="unnnic-checkbox"><label data-v-18939422="" class="unnnic-checkbox__input-wrapper"><input data-v-18939422="" class="unnnic-checkbox__input" type="checkbox" checked="">
      <p data-v-18939422="" class="unnnic-checkbox__label" data-testid="checkbox-text-right">Test Option</p>
    </label>
    <!--v-if-->
  </section>
</div>"
`;

exports[`MultiSelectOption.vue > snapshot testing > matches snapshot with both active and disabled states 1`] = `
"<div data-v-d2b97c58="" class="unnnic-multi-select-option">
  <section data-v-18939422="" data-v-d2b97c58="" class="unnnic-checkbox"><label data-v-18939422="" class="unnnic-checkbox__input-wrapper unnnic-checkbox__input-wrapper--disabled"><input data-v-18939422="" class="unnnic-checkbox__input" type="checkbox" disabled="" checked="">
      <p data-v-18939422="" class="unnnic-checkbox__label unnnic-checkbox__label--disabled" data-testid="checkbox-text-right">Test Option</p>
    </label>
    <!--v-if-->
  </section>
</div>"
`;

exports[`MultiSelectOption.vue > snapshot testing > matches snapshot with default props 1`] = `
"<div data-v-d2b97c58="" class="unnnic-multi-select-option">
  <section data-v-18939422="" data-v-d2b97c58="" class="unnnic-checkbox"><label data-v-18939422="" class="unnnic-checkbox__input-wrapper"><input data-v-18939422="" class="unnnic-checkbox__input" type="checkbox">
      <p data-v-18939422="" class="unnnic-checkbox__label" data-testid="checkbox-text-right">Test Option</p>
    </label>
    <!--v-if-->
  </section>
</div>"
`;

exports[`MultiSelectOption.vue > snapshot testing > matches snapshot with disabled state 1`] = `
"<div data-v-d2b97c58="" class="unnnic-multi-select-option">
  <section data-v-18939422="" data-v-d2b97c58="" class="unnnic-checkbox"><label data-v-18939422="" class="unnnic-checkbox__input-wrapper unnnic-checkbox__input-wrapper--disabled"><input data-v-18939422="" class="unnnic-checkbox__input" type="checkbox" disabled="">
      <p data-v-18939422="" class="unnnic-checkbox__label unnnic-checkbox__label--disabled" data-testid="checkbox-text-right">Test Option</p>
    </label>
    <!--v-if-->
  </section>
</div>"
`;

exports[`MultiSelectOption.vue > snapshot testing > matches snapshot with focused state 1`] = `
"<div data-v-d2b97c58="" class="unnnic-multi-select-option">
  <section data-v-18939422="" data-v-d2b97c58="" class="unnnic-checkbox"><label data-v-18939422="" class="unnnic-checkbox__input-wrapper"><input data-v-18939422="" class="unnnic-checkbox__input" type="checkbox">
      <p data-v-18939422="" class="unnnic-checkbox__label" data-testid="checkbox-text-right">Test Option</p>
    </label>
    <!--v-if-->
  </section>
</div>"
`;
